# P3IV

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  clean.sh  install.sh  package.xml  requirements.txt
docs/: conf.py  index.rst
p3iv/: .gitignore  CMakeLists.txt  clean.sh  package.xml
p3iv/configurations/: settings.yaml  test_cases.yaml
p3iv/scripts/: main.py
p3iv_core/: CMakeLists.txt  CODEOWNERS  package.xml  setup.py
p3iv_core/src/p3iv_core/: fooo.py  run.py
p3iv_core/src/p3iv_core/bindings/: __init__.py  dataset.py
p3iv_core/src/p3iv_core/configurations/: settings.py  test_cases.py  utils.py
p3iv_modules/: CMakeLists.txt  package.xml
p3iv_modules/src/p3iv_modules/: execute.py  modules.py
p3iv_modules/src/p3iv_modules/action/: act.py
p3iv_modules/src/p3iv_modules/decision/: basic.py  decision_making.py
p3iv_modules/src/p3iv_modules/interfaces/: __init__.py  action.py  decision_making.py  perception.py  planning.py  prediction.py  understanding.py
p3iv_modules/src/p3iv_modules/perception/: limited.py  perfect.py
p3iv_modules/src/p3iv_modules/planner/: constant_velocity.py  utils.py
p3iv_modules/src/p3iv_modules/prediction/: pseudo.py
p3iv_modules/src/p3iv_modules/understanding/: basic.py
p3iv_modules/test/: test_routing.py
p3iv_types/: .gitignore  CMakeLists.txt  package.xml
p3iv_types/docs/: conf.py  index.rst
p3iv_types/include/p3iv_types/: driving_corridor.hpp  motion_state.hpp  route_option.hpp  scene_model.hpp  scene_object.hpp  tracked_object.hpp  traffic_rules.hpp  visibility_information.hpp
p3iv_types/include/p3iv_types/internal/: point2d.hpp
p3iv_types/include/p3iv_types/python_converters/: pybind_utils.hpp
p3iv_types/python_api/: py_motion_state.cpp  py_motion_state.hpp  pybind_utils.hpp
p3iv_types/src/: route_option.cpp  scene_model.cpp  scene_object.cpp  traffic_rules.cpp  visibility_information.cpp
p3iv_types/src/p3iv_types/: __init__.py  decision_base.py  environment_model.py  ground_truth.py  maneuvers.py  motion.py  motion_plans.py  motion_state.py  precedence.py  scene_model.py  scene_object.py  situation_model.py  situation_object.py  timestamp.py  tracked_object.py  vehicle.py
p3iv_types/test/: test_environment_model.py  test_motion_state.cpp  test_motion_state.py  test_motionplan.py  test_py_motion_state.py  test_route_option.cpp  test_scene_model.cpp  test_scene_object.cpp  test_tracked_object.cpp  test_traffic_rules.cpp  test_vehicle_corners.py  test_visibility_information.cpp
p3iv_utils/: CMakeLists.txt  README.md  package.xml
p3iv_utils/include/p3iv_utils/: finite_differences.hpp  interpolation.hpp  kinematic_bicycle_model.hpp  kinematics.hpp
p3iv_utils/res/maps/lanelet2/: DR_DEU_Merging_MT_extended.osm  DR_DEU_Roundabout_OF_extended.osm  LICENCE  LICENSE
p3iv_utils/src/p3iv_utils/: consoleprint.py  coordinate_transformation.py  driver_models.py  extrema_functions.py  finite_differences.py  helper_functions.py  integrate_acceleration.py  lanelet_map_reader.py  ofstream.py  planner_debugger.py  polygon_operations.py  vehicle_models.py  vehicle_rectangle.py
p3iv_utils/test/: finite_differences.cpp  interpolation.cpp  kinematics.cpp  test_coordinate_transformation.py  test_finite_differences.py  test_utils.py  test_vehicle_corners.py
p3iv_utils_polyline/: CMakeLists.txt  CODEOWNERS  LICENSE  README.md  package.xml
p3iv_utils_polyline/include/p3iv_utils_polyline/: interpolated_line_segment.hpp  interpolated_polyline.hpp
p3iv_utils_polyline/python_api/: py_interpolated_polyline.cpp  py_interpolated_polyline.hpp
p3iv_utils_polyline/src/p3iv_utils_polyline/: coordinate_transformation.py  interpolated_polyline.py  interpolated_polyline_segment.py
p3iv_utils_polyline/src/p3iv_utils_polyline/visualization/: plot_distance_contours.py  plot_interpolated_tangents.py  utils.py
p3iv_utils_polyline/test/: test_coordinate_transformation.py  test_interpolated_polyline.cpp  test_line.py  test_rectangle.py
p3iv_utils_polyvision/: CMakeLists.txt  CODEOWNERS  README.md  package.xml
p3iv_utils_polyvision/include/p3iv_utils_polyvision/: cgal_debug_utils..hpp  cgal_utils.hpp  check_inside.hpp  polyvision_cgal.hpp  visible_area.hpp
p3iv_utils_polyvision/include/p3iv_utils_polyvision/internal/: cgal_debug_utils.hpp
p3iv_utils_polyvision/python_api/: pypolyvision.cpp  pypolyvision.hpp
p3iv_utils_polyvision/res/: notes.txt
p3iv_utils_polyvision/scripts/: tests_animation.py
p3iv_utils_polyvision/src/: cgal_utils.cpp  visible_area.cpp
p3iv_utils_polyvision/src/p3iv_utils_polyvision/: fov_wedge.py  visualisation.py
p3iv_utils_polyvision/test/: cgal_check_inside.cpp  cgal_convex_hull.cpp  cgal_distance.cpp  cgal_polygon.cpp
p3iv_utils_probability/: CMakeLists.txt  README.md  package.xml
p3iv_utils_probability/include/p3iv_utils_probability/: bivariate_distribution.hpp  sequence_distribution.hpp  truncated_distribution.hpp  univariate_distribution.hpp
p3iv_utils_probability/include/p3iv_utils_probability/internal/: approximations.hpp  normal.hpp
p3iv_utils_probability/res/approximation_test/: univariate_normal_approximation.py
p3iv_utils_probability/src/p3iv_utils_probability/distributions/: __init__.py  bivariate_distribution.py  mixture_distribution.py  sequence_distribution.py  truncated_distribution.py  univariate_distribution.py
p3iv_utils_probability/test/: test_approximations.cpp  test_bivariate_distribution.cpp  test_check_covaraince_vals.py  test_covariance_check.py  test_distribution_sequence.cpp  test_distribution_sequence.py  test_normal.cpp  test_normal_distribution.cpp  test_normal_distribution.py  test_normal_mixture.py  test_plot.py  test_truncated_normal.cpp  test_truncated_normal.py  test_type_check.py  test_util.py
p3iv_visualization/: CMakeLists.txt  README.md  package.xml
p3iv_visualization/scripts/examples/: plot_cartesian.py  plot_lanelet2.py
p3iv_visualization/test/: test_car_image.py  test_motion.py  test_plot_cartesian.py  test_plot_lanelet2.py  test_plot_uncertainty_ellipse.py  test_plot_vehicle.py
(+70 files in other folders)
