<?xml version="1.0"?>
<package format="2">
  <name>p3iv</name>
  <version>0.0.0</version>
  <description>Main pkg for Probabilistic Prediction and Planning for Intelligent Vehicles Simulator</description>

  <license>MRT</license>
  <maintainer email="sahin.tas@kit.edu">Sahin Tas</maintainer>
  <author email="sahin.tas@kit.edu">Sahin Tas</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/planning-simulation/p3iv</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <depend>lanelet2_core</depend>
  <depend>lanelet2_matching</depend>
  <depend>util_motion</depend>
  <depend>util_probability</depend>
  <depend>p3iv_utils</depend>
  <depend>polyvision</depend>
  <depend>perception</depend>
  <depend>localization</depend>
  <depend>understanding</depend>
  <depend>prediction</depend>
  <depend>decision_making</depend>
  <depend>planner</depend>
  <depend>action</depend>
  <depend>visualization</depend>



  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
