<?xml version="1.0"?>
<package format="2">
  <name>p3iv_types</name>
  <version>0.0.0</version>
  <description>Type definitions of p3iv</description>

  <license>MRT</license>
  <maintainer email="sahin.tas@kit.edu">Sahin Tas</maintainer>
  <author email="sahin.tas@kit.edu">Sahin Tas</author>
  <url type="repository"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>util_motion</depend>
  <depend>util_probability</depend>

  <export>
    <rosdoc config="../rosdoc.yaml" />
  </export>

</package>
