<?xml version="1.0"?>
<package format="3">
  <name>p3iv_types</name>
  <version>0.0.0</version>
  <description>Type definitions of p3iv</description>

  <license>BSD</license>
  <maintainer email="tas@fzi.de">Sahin Tas</maintainer>
  <author email="tas@fzi.de">Sahin Tas</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/P3IV</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>pybind11-dev</depend>
  <depend>p3iv_utils_probability</depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>

  <export>
    <rosdoc config="../rosdoc.yaml" />
  </export>

</package>
