<?xml version="1.0"?>
<package format="2">
  <name>p3iv_utils</name>
  <version>0.0.0</version>
  <description>Utility functions of p3iv</description>

  <license>MRT</license>
  <maintainer email="sahin.tas@kit.edu">Sahin Tas</maintainer>
  <author email="sahin.tas@kit.edu">Sahin Tas</author>
  <url type="repository"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <exec_depend>lanelet2_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>  
  <exec_depend>python3-scipy</exec_depend>  
  <exec_depend>python3-simplejson</exec_depend>  

  <export>
    <rosdoc config="../rosdoc.yaml" />
  </export>

</package>
