<?xml version="1.0"?>
<package format="2">
  <name>p3iv_utils_polyvision</name>
  <version>0.0.0</version>
  <description>Polygon intersection and offsetting operations for visible area calculations</description>

  <license>BSD</license>
  <maintainer email="tas@fzi.de">Sahin Tas</maintainer>
  <author email="tas@fzi.de">Sahin Tas</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/P3IV</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <test_depend>libgoogle-glog-dev</test_depend>

  <depend>cgal</depend>
  <depend>pybind11-dev</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <rosdoc config="../rosdoc.yaml" />
  </export>
</package>
