<?xml version="1.0"?>
<package format="2">
  <name>p3iv_visualization</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>contact-the-maintainer</license>
  <maintainer email="sahin.tas@kit.edu">Sahin Tas</maintainer>
  <author email="sahin.tas@kit.edu">Sahin Tas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>lanelet2_core</depend>
  <depend>p3iv_utils</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  

  <export>
    <rosdoc config="../rosdoc.yaml" />
  </export>
</package>
